--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <input type="number" id="num1" placeholder="Number 1" />
     <input type="number" id="num2" placeholder="Number 2" />
     <input type="number" id="num3" placeholder="Number 3" />
-    <button>Add!</button>
+    <button>Add</button>
   </body>
 </html>
